--- a/modules/driver-safety/cloudformation.yaml
+++ b/modules/driver-safety/cloudformation.yaml
@@ -11,8 +11,9 @@ Resources:
       Role: !GetAtt DriverSafetyRole.Arn
       MemorySize: 1024
       Environment:
-        # Variables: TODO
-        #   VEHICLE_TRIP_TBL: !Ref VehicleTripTable
+        Variables:
+          VEHICLE_TRIP_TBL: !ImportValue connected-vehicle-fleet-trip-table-name
+        # TODO
         #   NOTIFICATION_SERVICE: !Ref NotificationServiceFunction
       Events: TODO
         IoTRule:
@@ -57,9 +58,7 @@ Resources:
                   - "dynamodb:Query"
                   - "dynamodb:Scan"
                   - "dynamodb:UpdateItem"
-                Resource: "*"
-                # Resource: TODO
-                #             !Join ["", ["arn:aws:dynamodb:", Ref: "AWS::Region", ":", Ref: "AWS::AccountId", ":table/", Ref: VehicleTripTable]]
+                Resource: !ImportValue connected-vehicle-fleet-trip-table-arn
                 Effect: Allow
               - 
                 Sid: SendNotifications
