--- a/modules/directory.yaml
+++ b/modules/directory.yaml
@@ -52,6 +52,7 @@ Modules:
     Consumes:
       - fleet
       - telemetry
+      - notifications
     Location: 
       Type: local
       Source: dtc
