--- a/modules/directory.yaml
+++ b/modules/directory.yaml
@@ -15,6 +15,8 @@ Modules:
       Source: fleet
   - 
     Name: telemetry
+    Consumes:
+      - fleet
     Core: Yes
     Location:
       Type: local
