Fixed telemetry module reference

--- a/modules/telemetry/cloudformation.yaml
+++ b/modules/telemetry/cloudformation.yaml
@@ -95,7 +95,7 @@ Resources:
         Actions:
           -
             Firehose:
-              DeliveryStreamName: !Ref TelemetryDeliveryStream
+              DeliveryStreamName: !Ref Stream
               RoleArn: !GetAtt TelemetryIotActionsRole.Arn
               Separator: "\n"
   TelemetryIotActionsRole:
